Safari365 Prod/src/objects/Quotation_History__c.object
<CustomObject>
    <fields>
        <fullName>Date_Confirmed__c</fullName>
        <label>Date Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_to_ZAR__c</fullName>
        <formula>(1/Internal_EUR_Exchange__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EUR to ZAR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_EUR_Exchange__c</fullName>
        <label>Internal Exchange Rate EUR to ZAR</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_EUR_Quotation_Cost_Total__c</fullName>
        <label>Internal EUR - Quotation Cost Total</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_EUR_Quotation_Sale_Total__c</fullName>
        <label>Internal EUR - Quotation Sale Total</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Quotation_Profit_Total__c</fullName>
        <formula>Internal_Reporting_Cost_Total__c - Internal_Quotation_Sale_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal ZAR Quotation Profit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Quotation_Sale_Total__c</fullName>
        <inlineHelpText>This is the sales total for internal reporting at stage = Raised Booking Confirmation (it has utilised the nett exchange rate to calculate)</inlineHelpText>
        <label>Internal ZAR Quotation Sale Total</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Reporting_Cost_Total__c</fullName>
        <inlineHelpText>This is the cost of sales total for internal reporting at stage = Raised Booking Confirmation (it has utilised the nett exchange rate to calculate)</inlineHelpText>
        <label>Internal ZAR Quotation Cost Total</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_USD_Exchange__c</fullName>
        <label>Internal Exchange Rate USD to ZAR</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_USD_Quotation_Cost_Total__c</fullName>
        <label>Internal USD - Quotation Cost Total</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_USD_Quotation_Sale_Total__c</fullName>
        <label>Internal USD - Quotation Sale Total</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_ZAR_Exchange__c</fullName>
        <label>Internal Exchange Rate ZAR to ZAR</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation__c</fullName>
        <label>Quotation</label>
        <referenceTo>Quotations__c</referenceTo>
        <relationshipName>Quotation_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sale_Total_in_Selected_CC__c</fullName>
        <label>Sale Total in Selected CC</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USD_to_ZAR__c</fullName>
        <formula>(1/Internal_USD_Exchange__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USD to ZAR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZAR_to_ZAR__c</fullName>
        <formula>(1/Internal_ZAR_Exchange__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZAR to ZAR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Recorded Data at Booking Confirmation</label>
    <nameField>
        <label>Quotation History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recorded Data at Booking Confirmation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>